--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cookie": "^0.3.1",
+    "jsonwebtoken": "^8.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
+  "devDependencies": {
+    "netlify-lambda": "^0.4.0"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "buildFunctions": "netlify-lambda build functions",
+    "build": "npm run buildFunctions && react-scripts build",
     "postbuild": "cp ./src/_redirects build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
